--- a/css/contact.css
+++ b/css/contact.css
@@ -24,13 +24,14 @@ form{
 }
 .form-control{
     width:600px;
-    background:transparent;
+    background:#BBD8F2;
     border:none;
     outline:none;
     border-bottom:1px solid gray;
     color:#586F8C;;
     font-size:18px;
-    margin-bottom:16px
+    margin-bottom:16px;
+    
 
 }
 input{
@@ -38,14 +39,15 @@ input{
 
 }
 .submit{
-    background:#586F8C;;
+    background:#bbd8f2;
     border-color:transparent;
-    color:#fff;
+    color:#3f4b59;
     font-size: 20px;
     font-weight:bold; 
     letter-spacing:2px;
     height:50px;
     margin-top:20px;
+    border-radius:10px 10px 10px 10px;
 
 }
 .submit:hover{
